// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cancel 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Initial rendering 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Submit empty form 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control is-invalid"
        id="email"
        name="email"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter an email address
      </div>
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control is-invalid"
        id="displayName"
        name="displayName"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a display name
      </div>
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control is-invalid"
        id="password"
        name="password"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a password
      </div>
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control is-invalid"
        id="password2"
        name="password2"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Please re-enter the password
      </div>
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Submit form - Duplicate Email Address 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control is-invalid"
        id="email"
        name="email"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Email Address is already registered
      </div>
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Submit form - Success 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        readonly=""
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        readonly=""
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        <span
          aria-hidden="true"
          class="spinner-border spinner-border-sm"
          role="status"
        />
         
        Register
      </button>
      <button
        class="btn btn-link"
        disabled=""
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Submit form - Unexpected error 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
    <div
      class="form-group"
    >
      <div
        class="alert alert-danger"
        role="alert"
      >
        An unexpected error occurred: Error: Network Error
      </div>
    </div>
  </form>
</div>
`;

exports[`Submit form - all whitespace 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control is-invalid"
        id="email"
        name="email"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter an email address
      </div>
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control is-invalid"
        id="displayName"
        name="displayName"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a display name
      </div>
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Submit form - different passwords 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control is-invalid"
        id="password2"
        name="password2"
        type="password"
      />
      <div
        class="invalid-feedback"
      >
        Passwords do not match
      </div>
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Submit form - malformed email address 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control is-invalid"
        id="email"
        name="email"
        type="text"
      />
      <div
        class="invalid-feedback"
      >
        Please enter a valid email address
      </div>
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Register
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Submit form - pending 1`] = `
<div>
  <h3>
    Register
  </h3>
  <form
    data-test="registerForm"
  >
    <div
      class="form-group"
      data-test="username"
    >
      <label
        for="username"
      >
        Username
      </label>
      <input
        class="form-control"
        id="username"
        name="username"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="email"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form-control"
        id="email"
        name="email"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="displayName"
    >
      <label
        for="displayName"
      >
        Display Name
      </label>
      <input
        class="form-control"
        id="displayName"
        name="displayName"
        readonly=""
        type="text"
      />
    </div>
    <div
      class="form-group"
      data-test="password"
    >
      <label
        for="password"
      >
        Password
      </label>
      <input
        class="form-control"
        id="password"
        name="password"
        readonly=""
        type="password"
      />
    </div>
    <div
      class="form-group"
      data-test="password2"
    >
      <label
        for="password2"
      >
        Repeat Password
      </label>
      <input
        class="form-control"
        id="password2"
        name="password2"
        readonly=""
        type="password"
      />
    </div>
    <div
      class="form-group"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        <span
          aria-hidden="true"
          class="spinner-border spinner-border-sm"
          role="status"
        />
         
        Register
      </button>
      <button
        class="btn btn-link"
        disabled=""
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
